mnsh Changelog

Development version 0.0.4
SUMMARY: Minor edits
- TODO.txt: added
- README.txt: better explanation

Development version 0.0.3
SUMMARY: Minor edits
- main.cpp: mark as obsolete

Development version 0.0.2
SUMMARY: Basic functionality
- main.c: command user input loop is added
- main.c: license header is added

Development version 0.0.1
SUMMARY: The project is transitioning from C++ to C
- main.c: created
- Makefile: created
- CHANGELOG.txt: created
- LICENSE.txt: renamed from license.txt